--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/router": "~10.2.4",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@tesch/tesch-lib": "^1.0.7-beta",
+    "@tesch/tesch-lib": "^1.0.9-beta-6",
     "rxjs": "~6.6.0",
     "scss-bundle": "^3.1.2",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
