--- a/projects/tesch-lib/package.json
+++ b/projects/tesch-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tesch/tesch-lib",
-  "version": "1.0.7-beta",
+  "version": "1.0.9-beta-6",
   "description": "personal lib",
   "author": "Diego Tesch Gramelich",
   "repository": {
