--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@tesch/tesch-lib": "^1.0.10-beta-1",
+    "bootstrap": "^5.1.1",
     "rxjs": "~6.6.0",
     "scss-bundle": "^3.1.2",
     "tslib": "^2.0.0",
